--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.2.0",
     "react-animations": "^1.0.0",
     "react-dom": "^16.2.0",
+    "react-reveal": "^0.7.3",
     "react-scripts": "1.0.17",
     "styled-components": "^2.4.0"
   },
